fix  align-items in header desktop

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -44,6 +44,7 @@
     @include media(desktop) {
       height: 80px;
       padding-inline: 61px;
+      align-items: center;
     }
   }
 
